Hide journal link for now. Add rows of post previews. Start to modularize css.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ title: Chris Womack
     <p class="disclaimer">*I'm in the process of teaching myself design, but I'm listing it anyway, because of <a href="https://thecoffeelicious.com/fuck-yes-youre-a-writer-fd06c00ba24e">this medium post</a></p>
     <hr>
   </div>
-  <a href="/journal" class="journal-link">Journal Entries</a>
+  <a href="/journal/" class="journal-link" style="display: none;">Journal Entries</a>
 </div>
