--- a/journal.html
+++ b/journal.html
@@ -7,48 +7,22 @@ permalink: /journal/
   <a href="/"><img src="/assets/teacup-logo.png" class="logo"></a>
 
   <div class="journal-top">
-    <h1>Journal</h1>
-    <h2>musings from a life half lived</h2>
+    <h2>Journal</h2>
+    <h3>musings from a life half lived</h3>
   </div>
 
   <div class="grid-container">
     <div class="row">
       <div class="col">
         <div class="post preview">
+          <h6 class="date">4.24.17</h6>
           <h3>This is what a title should look like</h3>
           <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
         </div>
       </div>
       <div class="col">
         <div class="post preview">
-          <h3>This is what a title should look like</h3>
-          <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="post preview">
-          <h3>This is what a title should look like</h3>
-          <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="post preview">
-          <h3>This is what a title should look like</h3>
-          <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="post preview">
-          <h3>This is what a title should look like</h3>
-          <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="post preview">
+          <h6 class="date">4.25.17</h6>
           <h3>This is what a title should look like</h3>
           <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
         </div>
