Reorganized sass, made 'custom' grid, updated description a little, changed logo

--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 layout: default
 title: Chris Womack
 ---
+<div class="l-siteContainer">
+  <main id="main">
+    <div class="l-wrap">
+      <a href="/">
+        <img src="/assets/teacup-logo.png" class="o-teacup o-teacup--home">
+      </a>
+      <div class="greeting">
+        <h4 class="greeting-hi">Hi there!</h4>
+        <h1 class="greeting-name">I'm Chris Womack</h1>
+      </div>
+      <p class="labels">Developer &middot; Writer &middot; Designer<span class="o-asterisk">*</span> &middot; Tea Drinker</p>
 
-<div class="content homepage">
-  <a href="/"><img src="/assets/teacup-logo.png" class="logo"></a>
-  <div class="greeting">
-    <h4>Hi there!</h4>
-    <h1>I'm Chris Womack</h1>
-  </div>
-  <p class="labels">Developer &middot; Designer<span class="asterisk">*</span> &middot; Student &middot; Tea Drinker</p>
+      <div class="blurb">
+        <p>I started as a Software Engineer at <a href="https://www.rev.com" class="o-link">Rev</a> in San Francisco this September.</p>
 
-  <div class="blurb">
-    <p class="fall-plans">In the fall I'll be joining <a href="https://www.rev.com">Rev</a> in #Frisco (sorry) as a Software Engineer</p>
-
-    <p class="summer-plans">This summer I'm working on a project to increase civic engagement,<br>
-      and I'm available for freelance. Feel free to <a href="mailto:womackchrisw@gmail.com">get in touch</a></p>
-
-    <p class="disclaimer">*I'm in the process of teaching myself design, but I'm listing it anyway, because of <a href="https://thecoffeelicious.com/fuck-yes-youre-a-writer-fd06c00ba24e">this medium post</a></p>
-    <hr>
-  </div>
-  <a href="/journal/" class="journal-link" style="display: none;">Journal Entries</a>
+        <p class="disclaimer">*I'm in the process of teaching myself design, but I'm listing it anyway, because of <a href="https://thecoffeelicious.com/fuck-yes-youre-a-writer-fd06c00ba24e" class="o-link">this medium post</a></p>
+        <hr>
+      </div>
+      <a href="/journal/" class="journalLink t5">Journal Entries</a>
+    </div>
+  </main>
 </div>
