--- a/journal.html
+++ b/journal.html
@@ -3,31 +3,47 @@ layout: default
 title: The Online Journal of Chris Womack
 permalink: /journal/
 ---
-<div class="content journal">
-  <a href="/"><img src="/assets/teacup-logo.png" class="logo"></a>
-
-  <div class="journal-top">
-    <h2>Journal</h2>
-    <h3>musings from a life half lived</h3>
+<div class="l-siteContainer">
+  <div class="o-homeLink">
+    <a href="/">
+      <img src="/assets/teacup-logo.png" class="o-teacup">
+    </a>
   </div>
-
-  <div class="grid-container">
-    <div class="row">
-      <div class="col">
-        <div class="post preview">
-          <h6 class="date">4.24.17</h6>
-          <h3>This is what a title should look like</h3>
-          <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
+  <main class="main">
+    <div class="journalHeader">
+      <h2 class="journalHeader-title">Journal</h2>
+      <h3 class="journalHeader-subtitle">musings from a life half lived</h3>
+    </div>
+    <div class="journalGrid">
+      <div class="sidebar"></div>
+      <div class="postWrap">
+        <div class="o-postPreview">
+          <h6 class="o-postPreview-date">4.24.17</h6>
+          <h3 class="o-postPreview-title">This is what a title should look like</h3>
+          <p class="o-postPreview-lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
         </div>
       </div>
-      <div class="col">
-        <div class="post preview">
-          <h6 class="date">4.25.17</h6>
-          <h3>This is what a title should look like</h3>
-          <p class="lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
+      <div class="postWrap">
+        <div class="o-postPreview">
+          <h6 class="o-postPreview-date">4.25.17</h6>
+          <h3 class="o-postPreview-title">This is what a title should look like</h3>
+          <p class="o-postPreview-lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
+        </div>
+      </div>
+      <div class="postWrap">
+        <div class="o-postPreview">
+          <h6 class="o-postPreview-date">4.24.17</h6>
+          <h3 class="o-postPreview-title">This is what a title should look like</h3>
+          <p class="o-postPreview-lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
+        </div>
+      </div>
+      <div class="postWrap">
+        <div class="o-postPreview">
+          <h6 class="o-postPreview-date">4.25.17</h6>
+          <h3 class="o-postPreview-title">This is what a title should look like</h3>
+          <p class="o-postPreview-lede">This is some lede text. I think I'm using that right. I think I need a little more.</p>
         </div>
       </div>
     </div>
-  </div>
-
+  </main>
 </div>
